PDF: Fix find text behavior.

Highlight the first search result immediately after finding it while the
search continues onwards. Instead of waiting for all the search results
to return before highlighting the first search result.

BUG=764635

Change-Id: I445ffb88527bd592fc5a51d499ea90d752a88918
Reviewed-on: https://chromium-review.googlesource.com/1013748
Commit-Queue: Lei Zhang <thestig@chromium.org>
Reviewed-by: Paul Meyer <paulmeyer@chromium.org>
Reviewed-by: dsinclair <dsinclair@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553843}
Former-commit-id: c3ea2d2b78f0108debbf6ba56d1b702b63571349