pdf/pdfium/pdfium_engine.cc
@@ -2410,6 +2410,7 @@ void PDFiumEngine::StartFind(const std::string& text, bool case_sensitive) {
       character_to_start_searching_from = old_selection[0].char_index();
       last_page_to_search_ = next_page_to_search_;
     }
+    search_in_progress_ = true;
   }
 
   int current_page = next_page_to_search_;
@@ -2449,6 +2450,8 @@ void PDFiumEngine::StartFind(const std::string& text, bool case_sensitive) {
        (pages_.size() > 1 && current_page == next_page_to_search_));
 
   if (end_of_search) {
+    search_in_progress_ = false;
+
     // Send the final notification.
     client_->NotifyNumberOfFindResultsChanged(find_results_.size(), true);
     return;
@@ -2553,6 +2556,7 @@ void PDFiumEngine::SearchUsingICU(const base::string16& term,
 }
 
 void PDFiumEngine::AddFindResult(const PDFiumRange& result) {
+  bool first_result = find_results_.empty();
   // Figure out where to insert the new location, since we could have
   // started searching midway and now we wrapped.
   size_t result_index;
@@ -2568,6 +2572,11 @@ void PDFiumEngine::AddFindResult(const PDFiumRange& result) {
   find_results_.insert(find_results_.begin() + result_index, result);
   UpdateTickMarks();
   client_->NotifyNumberOfFindResultsChanged(find_results_.size(), false);
+  if (first_result) {
+    DCHECK(!resume_find_index_);
+    DCHECK(!current_find_index_);
+    SelectFindResult(/*forward=*/true);
+  }
 }
 
 bool PDFiumEngine::SelectFindResult(bool forward) {
@@ -2631,7 +2640,8 @@ bool PDFiumEngine::SelectFindResult(bool forward) {
   }
 
   client_->NotifySelectedFindResultChanged(current_find_index_.value());
-  client_->NotifyNumberOfFindResultsChanged(find_results_.size(), true);
+  if (!search_in_progress_)
+    client_->NotifyNumberOfFindResultsChanged(find_results_.size(), true);
   return true;
 }
 
@@ -2641,6 +2651,7 @@ void PDFiumEngine::StopFind() {
   selecting_ = false;
 
   find_results_.clear();
+  search_in_progress_ = false;
   next_page_to_search_ = -1;
   last_page_to_search_ = -1;
   last_character_index_to_search_ = -1;
